<resources>
    <string name="app_name">SoundPaceRunnersApplication</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="recipient_s_email">Recipient\'s Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="Message">Message</string>
    <string name="Send_Email">Send Email</string>
    <string name="title_activity_contact_form">ContactForm</string>
    <string name="Email">Email</string>
    <string name="adresse_mail_du_destinataire">Adresse mail du destinataire</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_modify_profile">ModifyProfileActivity</string>
</resources>