<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".MainActivity">

    <EditText
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/etRecipientEmail"
        android:hint="@string/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/etDestinarytEmail"
        android:hint="@string/adresse_mail_du_destinataire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        app:layout_constraintTop_toBottomOf="@+id/etRecipientEmail"
        android:id="@+id/etSubject"
        android:hint="@string/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:lines="3"
        app:layout_constraintTop_toBottomOf="@+id/etSubject"
        android:id="@+id/etMessage"
        android:hint="@string/Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSendEmail"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMessage"
        android:text="@string/Send_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>